[package]
name = "EMBER"
version = "0.1.0"
edition = "2021"



[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
winit = { version = "0.30.9", features = ["default"] }
libloading = "0.8.6"
log = { version = "0.4.27", features = ["std", "kv"] }
colored = "3.0.0"
ansi_term = "0.12.1"
shaderc = "0.10.1"
once_cell = "1.21.3"
rand = "0.9.2"

glm = "0.3.0"
errno = "0.3.14"


[target.'cfg(target_os = "windows")'.dependencies]


[target.'cfg(target_os = "linux")'.dependencies]
portal-screencast-waycap = "1.0.0"
pipewire = "0.9.2"
drm-fourcc = "2.2.0"
ashpd = "0.12.0"
libc = "0.2.177"


[profile.dev]